deployment/commit-tracker.yaml
apiVersion: v1
kind: Service
metadata:
  name: commit-tracker
spec:
  selector:
    app: commit-tracker
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commit-tracker-deployment
spec:
  selector:
    matchLabels:
      app: commit-tracker
  template:
    metadata:
      labels:
        app: commit-tracker
    spec:
      containers:
        - name: commit-tracker
          image: 840684697633.dkr.ecr.us-east-1.amazonaws.com/dev-iq_commit-tracker:latest
          ports:
            - containerPort: 8081
