deployment/init.yaml
apiVersion: v1
kind: Service
metadata:
  name: init
spec:
  selector:
    app: init
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: init-deployment
spec:
  selector:
    matchLabels:
      app: init
  template:
    metadata:
      labels:
        app: init
    spec:
      containers:
        - name: init
          image: 840684697633.dkr.ecr.us-east-1.amazonaws.com/dev-iq_init:latest
          ports:
            - containerPort: 8084
