deployment/issue-tracker.yaml
apiVersion: v1
kind: Service
metadata:
  name: issue-tracker
spec:
  selector:
    app: issue-tracker
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: issue-tracker-deployment
spec:
  selector:
    matchLabels:
      app: issue-tracker
  template:
    metadata:
      labels:
        app: issue-tracker
    spec:
      containers:
        - name: issue-tracker
          image: 840684697633.dkr.ecr.us-east-1.amazonaws.com/dev-iq_issue-tracker:latest
          ports:
            - containerPort: 8082
