deployment/api-gateway.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  annotations:
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /commit/
            pathType: Prefix
            backend:
              service:
                name: commit-tracker
                port:
                  number: 8081
          - path: /issue/
            pathType: Prefix
            backend:
              service:
                name: issue-tracker
                port:
                  number: 8082
          - path: /pullrequest/
            pathType: Prefix
            backend:
              service:
                name: pullreq-tracker
                port:
                  number: 8083
          - path: /init/
            pathType: Prefix
            backend:
              service:
                name: init
                port:
                  number: 8084
